--- a/404.md
+++ b/404.md
@@ -2,4 +2,6 @@
 permalink: /404.html
 ---
 
-Hi this is cassia
+Hi this is cassia! 
+I am a 3rd year Btech Student
+I am glad to be in this community, and i am excited to start contibuting to the world of Open Source.
